--- a/home.twig
+++ b/home.twig
@@ -2,31 +2,30 @@
 {% block class %}bk-pt-home{% endblock %}
 {% block content %}
 
-    <div class="home-feature">
-        <!-- Theme Feature Widget -->
+<div class="home-feature">
 
-        {{widget('content', 'sidebarcontent', {
-  content: 'Lorem ipsum dolor sit amet consectetur esumu adipisico elit, sed do eiusmod tempor est luctus ullamco incididun.'
-})|raw}}
+    <!-- Content Widget -->
+    {{widget('content', 'sidebarcontent', {
+      content: 'Lorem ipsum dolor sit amet consectetur esumu adipisico elit, sed do eiusmod tempor est luctus ullamco incididun.'
+    })|raw}}
 
-        {{widget('feature', 'featurehome', {
-            "header": "profile",
-            "defaultBgImg": asset('images/feature.jpg'),
-            'positionTopPercentage': '0',
-            'showBtn': true,
-            buttonText: "Lorem Ipsum"
-        })|raw}}
-    </div>
+    <!-- Template Feature Widget -->
+    {{widget('feature', 'featurehome', {
+        'header': 'profile',
+        'defaultBgImg': asset("images/feature.jpg"),
+        'positionTopPercentage': '0',
+        'showBtn': true,
+        'buttonText': 'Lorem Ipsum'
+    })|raw}}
 
+</div>
 
-
-	<!-- Zone Content -->
-	<div class="zone-content">
-		<!-- Main Widet Zone -->
-   		{{zone('main')|raw}}
-	</div>
-	<!-- End Zone Content -->
-
+<!-- Zone Content -->
+<div class="zone-content">
+	<!-- Main Widet Zone -->
+		{{zone('main')|raw}}
+</div>
+<!-- End Zone Content -->
 
 <!-- End Home Page Content -->
 {% endblock %}
