add padding to zone in homepage

--- a/less/fork-overrides.less
+++ b/less/fork-overrides.less
@@ -15,6 +15,10 @@ html body {
     box-shadow: none;
 }
 
+.bk-pt-home .container .zone-content {
+    padding: 20px 0;
+}
+
 // Wrapping container
 .container {
     @media only screen and (min-width: 1260px) {
